--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       <!-- Columna derecha: Imagen en lugar de video -->
 <div class="col-lg-5">
   <div class="mb-3 text-center">
-    <img src="img/Repizo.jpg" alt="Video institucional" style="width: 100%; height: auto; border-radius: 10px;">
+    <img src="img/repizo.jpg" alt="Video institucional" style="width: 100%; height: auto; border-radius: 10px;">
   </div>
 </div>
 
@@ -279,7 +279,7 @@
       <div class="col-md-4 mb-4">
         <div class="single_course text-center">
           <div class="course_head">
-            <img class="img-fluid" src="img/c2.JPG" alt="Informática Administrativa" />
+            <img class="img-fluid" src="img/c2.jpg" alt="Informática Administrativa" />
           </div>
           <h4 class="mt-3 mb-2">Informática Administrativa</h4>
           <p>Capacítate en el manejo de software, hardware y habilidades administrativas profesionales.</p>
@@ -510,7 +510,7 @@
     <!-- Footer inferior -->
     <div class="row footer-bottom d-flex justify-content-center align-items-center mt-4">
       <p class="col-auto footer-text m-0 text-white text-center">
-        &copy; <script>document.write(new Date().getFullYear());</script> Centro De Estudios Superiores Antonio Repizo, Todos los derechos reservados | Sitio creado por <a href="https://www.targetxalapa.com/" target="_blank">Target-Publicidad e Imagen</a>
+        &copy; <script>document.write(new Date().getFullYear());</script> Centro De Estudios Superiores Antonio Repizo. Todos los derechos reservados | Sitio creado por <a href="https://www.targetxalapa.com/" target="_blank">Target - Publicidad e Imagen</a>
       </p>
     </div>
   </div>
