--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
         <a href="https://www.instagram.com/antoniorepizo_bachiller?igsh=MTRvaHZmNm9rbXMwOQ==" class="social-icon instagram mx-2" target="_blank" aria-label="Instagram">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="https://www.tiktok.com/@tucuentatiktok" class="social-icon tiktok mx-2" target="_blank" aria-label="TikTok">
+        <a href="https://www.tiktok.com/@antoniorepizo_bachiller" class="social-icon tiktok mx-2" target="_blank" aria-label="TikTok">
           <i class="fab fa-tiktok"></i>
         </a>
       </div>
